tests/integration/fail/poly_record_contract_merge_sealed_tail_lhs.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::IllegalPolymorphicTailAccess'
let f | forall r. { a : Number; r } -> { a : Number; r } =
  fun r => r & { a | force = 0 }
in f { a | default = 100, b = 1 }